Menu for stories without a posting implemented.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -146,6 +146,7 @@
   "delete-blog" : "Delete my blog",
   "delete-comment" : "Do you really want to delete the comment \"{heading}\"?",
   "delete-draft" : "Delete draft",
+  "delete-message" : "Do you really want to delete this message?",
   "delete-post" : "Do you really want to delete the post \"{heading}\"?",
   "deleting" : "Deleting...",
   "deny-comments" : "Deny comments",
@@ -857,6 +858,10 @@
   "still-friend-blocked-user" : "The blocked user <b>{name}</b> is still your friend. Do you want to unfriend?",
   "still-subscribed-blocked-user" : "You are still subscribed to the blocked user <b>{name}</b>. Do you want to unsubscribe?",
   "stop-asking" : "Stop asking",
+  "story-type-plural" : {
+    "search-report" : "search popularity reports"
+  },
+  "story-type-turned-off" : "Turned off {type}",
   "strikeout" : "Strikeout",
   "subscribe" : "Subscribe",
   "subscribe-back" : "Subscribe back",
@@ -886,6 +891,7 @@
   "transfer-existing-name" : "Transfer an existing name",
   "transfer-existing-name-button" : "Transfer an Existing Name",
   "transfer-node-name" : "Transfer Name From Another Node",
+  "turn-off" : "Turn off",
   "unblock" : "Unblock",
   "unblock-after-days" : "Unblock after <0/> {count, plural, one {day} other {days}}",
   "unblock-after-time" : "Unblock after some time",
@@ -942,6 +948,7 @@
   "want-disconnect" : "Do you really want to log out?",
   "want-forget-changes" : "Do you really want to forget all changes?",
   "want-revoke-permissions" : "Do you really want to revoke all permissions from the application \"{name}\"?",
+  "want-turn-off-story-type" : "Do you really want to turn off {type}",
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
   "where-go" : "Where do you want to go?",
