--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -146,6 +146,7 @@
   "delete-blog" : "Usuń mój blog",
   "delete-comment" : "Czy na pewno chcesz usunąć komentarz \"{heading}\"?",
   "delete-draft" : "Usuń szkic",
+  "delete-message" : "Czy na pewno chcesz usunąć tę wiadomość?",
   "delete-post" : "Czy na pewno chcesz usunąć post \"{heading}\"?",
   "deleting" : "Usuwanie...",
   "deny-comments" : "Zabroń komentarzy",
@@ -857,6 +858,10 @@
   "still-friend-blocked-user" : "Zablokowany użytkownik <b>{name}</b> jest nadal Twoim znajomym. Czy chcesz usunąć ze znajomych?",
   "still-subscribed-blocked-user" : "Nadal subskrybujesz zablokowanego użytkownika <b>{name}</b>. Czy chcesz zrezygnować z subskrypcji?",
   "stop-asking" : "Przestań pytać",
+  "story-type-plural" : {
+    "search-report" : "raporty popularności wyszukiwania"
+  },
+  "story-type-turned-off" : "Wyłączono {type}",
   "strikeout" : "Przekreślenie",
   "subscribe" : "Subskrybuj",
   "subscribe-back" : "Subskrybuj z powrotem",
@@ -886,6 +891,7 @@
   "transfer-existing-name" : "Przenieś istniejącą nazwę",
   "transfer-existing-name-button" : "Przenieś istniejącą nazwę",
   "transfer-node-name" : "Przenieś nazwę z innego węzła",
+  "turn-off" : "Wyłącz",
   "unblock" : "Odblokuj",
   "unblock-after-days" : "Odblokuj po <0/> {count, plural, one {dniu} few {dniach} many {dniach} other {dniach}}",
   "unblock-after-time" : "Odblokuj po pewnym czasie",
@@ -942,6 +948,7 @@
   "want-disconnect" : "Czy na pewno chcesz się wylogować?",
   "want-forget-changes" : "Czy na pewno chcesz zapomnieć o wszystkich zmianach?",
   "want-revoke-permissions" : "Czy na pewno chcesz cofnąć wszystkie uprawnienia aplikacji \"{name}\"?",
+  "want-turn-off-story-type" : "Czy na pewno chcesz wyłączyć {type}",
   "welcome" : "Witaj!",
   "where-from" : "Skąd to pochodzi?",
   "where-go" : "Dokąd chcesz się udać?",
