--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -146,6 +146,7 @@
   "delete-blog" : "Удалить мой блог",
   "delete-comment" : "Вы действительно хотите удалить комментарий \"{heading}\"?",
   "delete-draft" : "Удалить черновик",
+  "delete-message" : "Вы действительно хотите удалить это сообщение?",
   "delete-post" : "Вы действительно хотите удалить пост \"{heading}\"?",
   "deleting" : "Удаление...",
   "deny-comments" : "Запретить комментарии",
@@ -857,6 +858,10 @@
   "still-friend-blocked-user" : "Заблокированный пользователь <b>{name}</b> всё ещё ваш друг. Хотите удалить из друзей?",
   "still-subscribed-blocked-user" : "Вы все еще подписаны на заблокированного пользователя <b>{name}</b>. Хотите отписаться?",
   "stop-asking" : "Больше не спрашивать",
+  "story-type-plural" : {
+    "search-report" : "отчеты о популярности в поиске"
+  },
+  "story-type-turned-off" : "Выключены {type}",
   "strikeout" : "Зачёркнутый",
   "subscribe" : "Подписаться",
   "subscribe-back" : "Подписаться в ответ",
@@ -886,6 +891,7 @@
   "transfer-existing-name" : "Переместить существующее имя",
   "transfer-existing-name-button" : "Переместить существующее имя",
   "transfer-node-name" : "Переместить имя с другого узла",
+  "turn-off" : "Выключить",
   "unblock" : "Разблокировать",
   "unblock-after-days" : "Разблокировать через <0/> {count, plural, one {день} few {дня} other {дней}}",
   "unblock-after-time" : "Разблокировать через некоторое время",
@@ -942,6 +948,7 @@
   "want-disconnect" : "Вы действительно хотите выйти?",
   "want-forget-changes" : "Вы действительно хотите забыть все изменения?",
   "want-revoke-permissions" : "Вы действительно хотите лишить всех полномочий приложение \"{name}\"?",
+  "want-turn-off-story-type" : "Вы действительно хотите выключить {type}?",
   "welcome" : "Привет!",
   "where-from" : "Откуда он взят?",
   "where-go" : "Куда вы хотите пойти?",
