--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -146,6 +146,7 @@
   "delete-blog" : "Видалити мій блог",
   "delete-comment" : "Ви дійсно бажаєте видалити коментар \"{heading}\"?",
   "delete-draft" : "Видалити чернетку",
+  "delete-message" : "Ви дійсно бажаєте видалити це повідомлення?",
   "delete-post" : "Ви дійсно бажаєте видалити пост \"{heading}\"?",
   "deleting" : "Видалення...",
   "deny-comments" : "Заборонити коментарі",
@@ -857,6 +858,10 @@
   "still-friend-blocked-user" : "Заблокований користувач <b>{name}</b> все ще є вашим другом. Хочете видалити з друзів?",
   "still-subscribed-blocked-user" : "Ви все ще підписані на заблокованого користувача <b>{name}</b>. Хочете відписатись?",
   "stop-asking" : "Припинити питати",
+  "story-type-plural" : {
+    "search-report" : "звіти про популярність у пошуку"
+  },
+  "story-type-turned-off" : "Вимкнено {type}",
   "strikeout" : "Закреслений",
   "subscribe" : "Підписатись",
   "subscribe-back" : "Підписатись у відповідь",
@@ -886,6 +891,7 @@
   "transfer-existing-name" : "Перемістити існуюче ім'я",
   "transfer-existing-name-button" : "Перемістити існуюче ім'я",
   "transfer-node-name" : "Перемістити ім'я з іншого вузла",
+  "turn-off" : "Вимкнути",
   "unblock" : "Розблокувати",
   "unblock-after-days" : "Розблокувати через <0/> {count, plural, one {день} few {дні} other {днів}}",
   "unblock-after-time" : "Розблокувати через певний час",
@@ -942,6 +948,7 @@
   "want-disconnect" : "Ви дійсно бажаєте вийти?",
   "want-forget-changes" : "Ви дійсно бажаєте забути про всі зміни?",
   "want-revoke-permissions" : "Ви дійсно бажаєте скасувати всі дозволи додатка \"{name}\"?",
+  "want-turn-off-story-type" : "Ви дійсно бажаєте вимкнути {type}",
   "welcome" : "Вітаю!",
   "where-from" : "Звідки його взято?",
   "where-go" : "Куди ви бажаєте піти?",
