Display the full name update reminder story.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -243,6 +243,7 @@
   "from-device" : "From Device",
   "from-internet" : "From Internet",
   "full-name" : "Full name",
+  "full-name-set" : "Full name set",
   "gender" : "Gender (choose or type anything)",
   "go" : "Go",
   "go-bottom" : "Go to the bottom",
@@ -407,6 +408,7 @@
   "name-or-node-url" : "Blog name or URL",
   "name-or-node-url-not-valid" : "Blog name or URL is not valid",
   "need-to-choose" : "Need to be chosen",
+  "new-name-new-posts" : "The new name will only appear in your new posts and comments",
   "new-password" : "New password",
   "new-post-button" : "New post",
   "new-post-item" : "New post",
@@ -859,6 +861,7 @@
   "still-subscribed-blocked-user" : "You are still subscribed to the blocked user <b>{name}</b>. Do you want to unsubscribe?",
   "stop-asking" : "Stop asking",
   "story-type-plural" : {
+    "reminder-full-name" : "reminders to set a full name",
     "search-report" : "search popularity reports"
   },
   "story-type-turned-off" : "Turned off {type}",
@@ -948,11 +951,13 @@
   "want-disconnect" : "Do you really want to log out?",
   "want-forget-changes" : "Do you really want to forget all changes?",
   "want-revoke-permissions" : "Do you really want to revoke all permissions from the application \"{name}\"?",
+  "want-set-right-now" : "Want to set it right now?",
   "want-turn-off-story-type" : "Do you really want to turn off {type}",
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
   "where-go" : "Where do you want to go?",
   "why-delete-blog" : "Why are you deleting the blog? (optional)",
+  "why-not-set-full-name" : "<0>Haven't set a full name yet?</0> A beautiful full name will appear in your posts and comments instead of the username. For example, instead of <1>{name}</1>, it will say <1>{full}</1>. It can be your real name or any other name you like. And you can change it at any time.",
   "width" : "Width",
   "write-anything" : "Write anything...",
   "write-comment-here" : "Write a comment to {mention} here...",
