--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -243,6 +243,7 @@
   "from-device" : "Z urządzenia",
   "from-internet" : "Z internetu",
   "full-name" : "Imię i nazwisko",
+  "full-name-set" : "Pełne imię ustawione",
   "gender" : "Płeć (wybierz lub wpisz cokolwiek)",
   "go" : "Idź",
   "go-bottom" : "Przejdź na dół",
@@ -407,6 +408,7 @@
   "name-or-node-url" : "Nazwa bloga lub URL",
   "name-or-node-url-not-valid" : "Nazwa bloga lub URL jest nieprawidłowa",
   "need-to-choose" : "Należy wybrać",
+  "new-name-new-posts" : "The new name will only appear in your new posts and comments",
   "new-password" : "Nowe hasło",
   "new-post-button" : "Nowy post",
   "new-post-item" : "Nowy post",
@@ -859,6 +861,7 @@
   "still-subscribed-blocked-user" : "Nadal subskrybujesz zablokowanego użytkownika <b>{name}</b>. Czy chcesz zrezygnować z subskrypcji?",
   "stop-asking" : "Przestań pytać",
   "story-type-plural" : {
+    "reminder-full-name" : "przypomnienia o ustawieniu pełnego imienia",
     "search-report" : "raporty popularności wyszukiwania"
   },
   "story-type-turned-off" : "Wyłączono {type}",
@@ -948,11 +951,13 @@
   "want-disconnect" : "Czy na pewno chcesz się wylogować?",
   "want-forget-changes" : "Czy na pewno chcesz zapomnieć o wszystkich zmianach?",
   "want-revoke-permissions" : "Czy na pewno chcesz cofnąć wszystkie uprawnienia aplikacji \"{name}\"?",
+  "want-set-right-now" : "Chcesz ustawić je teraz?",
   "want-turn-off-story-type" : "Czy na pewno chcesz wyłączyć {type}",
   "welcome" : "Witaj!",
   "where-from" : "Skąd to pochodzi?",
   "where-go" : "Dokąd chcesz się udać?",
   "why-delete-blog" : "Dlaczego usuwasz blog? (opcjonalnie)",
+  "why-not-set-full-name" : "<0>Jeszcze nie ustawiłeś pełnego imienia?</0> Piękne pełne imię będzie pojawiać się w twoich postach i komentarzach zamiast nazwy użytkownika. Na przykład, zamiast <1>{name}</1>, będzie napisane <1>{full}</1>. To może być twoje prawdziwe imię lub dowolne inne, które ci się podoba. I możesz je zmienić w dowolnym momencie.",
   "width" : "Szerokość",
   "write-anything" : "Napisz cokolwiek...",
   "write-comment-here" : "Napisz komentarz do {mention} tutaj...",
