--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -243,6 +243,7 @@
   "from-device" : "С устройства",
   "from-internet" : "Из Интернета",
   "full-name" : "Полное имя",
+  "full-name-set" : "Полное имя установлено",
   "gender" : "Пол/гендер (выберите или напишите что угодно)",
   "go" : "→",
   "go-bottom" : "Перейти вниз",
@@ -407,6 +408,7 @@
   "name-or-node-url" : "Имя или URL блога",
   "name-or-node-url-not-valid" : "Неверное имя или URL блога",
   "need-to-choose" : "Нужно выбрать",
+  "new-name-new-posts" : "Новое имя появится только в ваших новых постах и комментариях",
   "new-password" : "Новый пароль",
   "new-post-button" : "Написать",
   "new-post-item" : "Новый пост",
@@ -859,6 +861,7 @@
   "still-subscribed-blocked-user" : "Вы все еще подписаны на заблокированного пользователя <b>{name}</b>. Хотите отписаться?",
   "stop-asking" : "Больше не спрашивать",
   "story-type-plural" : {
+    "reminder-full-name" : "напоминания установить полное имя",
     "search-report" : "отчеты о популярности в поиске"
   },
   "story-type-turned-off" : "Выключены {type}",
@@ -948,11 +951,13 @@
   "want-disconnect" : "Вы действительно хотите выйти?",
   "want-forget-changes" : "Вы действительно хотите забыть все изменения?",
   "want-revoke-permissions" : "Вы действительно хотите лишить всех полномочий приложение \"{name}\"?",
+  "want-set-right-now" : "Хотите установить его прямо сейчас?",
   "want-turn-off-story-type" : "Вы действительно хотите выключить {type}?",
   "welcome" : "Привет!",
   "where-from" : "Откуда он взят?",
   "where-go" : "Куда вы хотите пойти?",
   "why-delete-blog" : "Почему вы удаляете блог? (необязательно)",
+  "why-not-set-full-name" : "<0>Ещё не установили полное имя?</0> Красивое полное имя будет появляться в ваших постах и комментариях вместо имени пользователя. Например, вместо <1>{name}</1> будет написано <1>{full}</1>. Это может быть ваше настоящее имя или любое другое, которое вам нравится. И его можно будет сменить в любой момент.",
   "width" : "Ширина",
   "write-anything" : "Пишите что угодно...",
   "write-comment-here" : "Напишите тут комментарий для {mention}...",
