--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -243,6 +243,7 @@
   "from-device" : "З пристрою",
   "from-internet" : "З Інтернету",
   "full-name" : "Повне ім'я",
+  "full-name-set" : "Повне ім'я встановлено",
   "gender" : "Пол/гендер (виберіть або напишіть що завгодно)",
   "go" : "→",
   "go-bottom" : "Перейти донизу",
@@ -407,6 +408,7 @@
   "name-or-node-url" : "Ім'я чи URL блога",
   "name-or-node-url-not-valid" : "Неправильне ім'я або URL блога",
   "need-to-choose" : "Треба вибрати",
+  "new-name-new-posts" : "Нове ім'я з'явиться лише у ваших нових постах і коментарях",
   "new-password" : "Новий пароль",
   "new-post-button" : "Написати",
   "new-post-item" : "Новий пост",
@@ -859,6 +861,7 @@
   "still-subscribed-blocked-user" : "Ви все ще підписані на заблокованого користувача <b>{name}</b>. Хочете відписатись?",
   "stop-asking" : "Припинити питати",
   "story-type-plural" : {
+    "reminder-full-name" : "нагадування встановити повне ім'я",
     "search-report" : "звіти про популярність у пошуку"
   },
   "story-type-turned-off" : "Вимкнено {type}",
@@ -948,11 +951,13 @@
   "want-disconnect" : "Ви дійсно бажаєте вийти?",
   "want-forget-changes" : "Ви дійсно бажаєте забути про всі зміни?",
   "want-revoke-permissions" : "Ви дійсно бажаєте скасувати всі дозволи додатка \"{name}\"?",
+  "want-set-right-now" : "Хочете встановити його прямо зараз?",
   "want-turn-off-story-type" : "Ви дійсно бажаєте вимкнути {type}",
   "welcome" : "Вітаю!",
   "where-from" : "Звідки його взято?",
   "where-go" : "Куди ви бажаєте піти?",
   "why-delete-blog" : "Чому ви видаляєте блог? (за бажанням)",
+  "why-not-set-full-name" : "<0>Ще не встановили повне ім'я?</0> Гарне повне ім'я буде з'являтися у ваших постах і коментарях замість імені користувача. Наприклад, замість <1>{name}</1> буде написано <1>{full}</1>. Це може бути ваше справжнє ім'я або будь-яке інше, яке вам подобається. І його можна буде змінити в будь-який момент.",
   "width" : "Ширина",
   "write-anything" : "Пишіть що завгодно...",
   "write-comment-here" : "Напишіть тут коментар для {mention}...",
