Display avatar update reminder story.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -33,6 +33,7 @@
   "auto-hide-comments" : "Automatically hide comments",
   "avatar" : "Avatar",
   "avatar-placeholder" : "Avatar placeholder",
+  "avatar-set" : "Avatar set",
   "avatar-shape" : "Avatar shape",
   "avatar-too-small" : "Avatar image size should be at least 100x100 pixels.",
   "back-to-feed" : "← {feed}",
@@ -952,11 +953,13 @@
   "want-forget-changes" : "Do you really want to forget all changes?",
   "want-revoke-permissions" : "Do you really want to revoke all permissions from the application \"{name}\"?",
   "want-set-right-now" : "Want to set it right now?",
+  "want-set-right-now-click-circle" : "Want to set it right now? Click on the circle.",
   "want-turn-off-story-type" : "Do you really want to turn off {type}",
   "welcome" : "Welcome!",
   "where-from" : "Where it comes from?",
   "where-go" : "Where do you want to go?",
   "why-delete-blog" : "Why are you deleting the blog? (optional)",
+  "why-not-set-avatar" : "<0>Haven't set an avatar yet?</0> Your avatar will make it easy for others to recognize you in discussions.",
   "why-not-set-full-name" : "<0>Haven't set a full name yet?</0> A beautiful full name will appear in your posts and comments instead of the username. For example, instead of <1>{name}</1>, it will say <1>{full}</1>. It can be your real name or any other name you like. And you can change it at any time.",
   "width" : "Width",
   "write-anything" : "Write anything...",
