--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -33,6 +33,7 @@
   "auto-hide-comments" : "Automatycznie ukrywaj komentarze",
   "avatar" : "Awatar",
   "avatar-placeholder" : "Miejsce na awatar",
+  "avatar-set" : "Awatar ustawiony",
   "avatar-shape" : "Kształt awatara",
   "avatar-too-small" : "Rozmiar obrazka awatara powinien wynosić co najmniej 100x100 pikseli.",
   "back-to-feed" : "← {feed}",
@@ -952,11 +953,13 @@
   "want-forget-changes" : "Czy na pewno chcesz zapomnieć o wszystkich zmianach?",
   "want-revoke-permissions" : "Czy na pewno chcesz cofnąć wszystkie uprawnienia aplikacji \"{name}\"?",
   "want-set-right-now" : "Chcesz ustawić je teraz?",
+  "want-set-right-now-click-circle" : "Chcesz ustawić go teraz? Kliknij na kółko.",
   "want-turn-off-story-type" : "Czy na pewno chcesz wyłączyć {type}",
   "welcome" : "Witaj!",
   "where-from" : "Skąd to pochodzi?",
   "where-go" : "Dokąd chcesz się udać?",
   "why-delete-blog" : "Dlaczego usuwasz blog? (opcjonalnie)",
+  "why-not-set-avatar" : "<0>Jeszcze nie ustawiłeś awatara?</0> Dzięki awatarowi łatwo cię rozpoznają w dyskusjach.",
   "why-not-set-full-name" : "<0>Jeszcze nie ustawiłeś pełnego imienia?</0> Piękne pełne imię będzie pojawiać się w twoich postach i komentarzach zamiast nazwy użytkownika. Na przykład, zamiast <1>{name}</1>, będzie napisane <1>{full}</1>. To może być twoje prawdziwe imię lub dowolne inne, które ci się podoba. I możesz je zmienić w dowolnym momencie.",
   "width" : "Szerokość",
   "write-anything" : "Napisz cokolwiek...",
