--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -33,6 +33,7 @@
   "auto-hide-comments" : "Автоматически скрывать комментарии",
   "avatar" : "Аватарка",
   "avatar-placeholder" : "Место для аватарки",
+  "avatar-set" : "Аватарка установлена",
   "avatar-shape" : "Форма аватарки",
   "avatar-too-small" : "Размер картинки для аватарки должен быть хотя бы 100x100 пикселов",
   "back-to-feed" : "← {feed}",
@@ -952,11 +953,13 @@
   "want-forget-changes" : "Вы действительно хотите забыть все изменения?",
   "want-revoke-permissions" : "Вы действительно хотите лишить всех полномочий приложение \"{name}\"?",
   "want-set-right-now" : "Хотите установить его прямо сейчас?",
+  "want-set-right-now-click-circle" : "Хотите установить её прямо сейчас? Нажмите на кружок.",
   "want-turn-off-story-type" : "Вы действительно хотите выключить {type}?",
   "welcome" : "Привет!",
   "where-from" : "Откуда он взят?",
   "where-go" : "Куда вы хотите пойти?",
   "why-delete-blog" : "Почему вы удаляете блог? (необязательно)",
+  "why-not-set-avatar" : "<0>Ещё не установили аватарку?</0> По аватарке вас будет легко узнать в обсуждениях.",
   "why-not-set-full-name" : "<0>Ещё не установили полное имя?</0> Красивое полное имя будет появляться в ваших постах и комментариях вместо имени пользователя. Например, вместо <1>{name}</1> будет написано <1>{full}</1>. Это может быть ваше настоящее имя или любое другое, которое вам нравится. И его можно будет сменить в любой момент.",
   "width" : "Ширина",
   "write-anything" : "Пишите что угодно...",
