--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -33,6 +33,7 @@
   "auto-hide-comments" : "Автоматично приховувати коментарі",
   "avatar" : "Аватар",
   "avatar-placeholder" : "Місце для аватара",
+  "avatar-set" : "Аватар встановлено",
   "avatar-shape" : "Форма аватара",
   "avatar-too-small" : "Розмір картинки для аватара повинен бути хоча б 100x100 пікселів",
   "back-to-feed" : "← {feed}",
@@ -952,11 +953,13 @@
   "want-forget-changes" : "Ви дійсно бажаєте забути про всі зміни?",
   "want-revoke-permissions" : "Ви дійсно бажаєте скасувати всі дозволи додатка \"{name}\"?",
   "want-set-right-now" : "Хочете встановити його прямо зараз?",
+  "want-set-right-now-click-circle" : "Хочете встановити його прямо зараз? Натисніть на кружечок.",
   "want-turn-off-story-type" : "Ви дійсно бажаєте вимкнути {type}",
   "welcome" : "Вітаю!",
   "where-from" : "Звідки його взято?",
   "where-go" : "Куди ви бажаєте піти?",
   "why-delete-blog" : "Чому ви видаляєте блог? (за бажанням)",
+  "why-not-set-avatar" : "<0>Ще не встановили аватар?</0> По аватару вас буде легко впізнати в обговореннях.",
   "why-not-set-full-name" : "<0>Ще не встановили повне ім'я?</0> Гарне повне ім'я буде з'являтися у ваших постах і коментарях замість імені користувача. Наприклад, замість <1>{name}</1> буде написано <1>{full}</1>. Це може бути ваше справжнє ім'я або будь-яке інше, яке вам подобається. І його можна буде змінити в будь-який момент.",
   "width" : "Ширина",
   "write-anything" : "Пишіть що завгодно...",
