Display e-mail update reminder story.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -208,7 +208,9 @@
   "edit-post-title" : "Edit Post",
   "edit-profile" : "Edit Profile",
   "e-mail" : "E-mail",
+  "email" : "E-mail",
   "email-not-set" : "Unfortunately, E-mail address for blog <b>{location}</b> is not set, so automatic password reset is impossible. Please, contact your Moera provider or server owner to find alternative ways to reset the password.",
+  "email-set" : "E-mail address set",
   "enable-oppose-reactions" : "Enable \"Oppose\" reactions",
   "enable-reactions" : "Enable reactions",
   "enter-name" : "Enter name...",
@@ -409,6 +411,7 @@
   "name-or-node-url" : "Blog name or URL",
   "name-or-node-url-not-valid" : "Blog name or URL is not valid",
   "need-to-choose" : "Need to be chosen",
+  "new-avatar-new-posts" : "The new avatar will only appear in your new posts and comments",
   "new-name-new-posts" : "The new name will only appear in your new posts and comments",
   "new-password" : "New password",
   "new-post-button" : "New post",
@@ -558,6 +561,7 @@
   "read-more" : "Read more...",
   "reason" : "Reason",
   "received-mail" : "Received the mail already",
+  "recommend-set-email" : "<0>We recommend providing an email address.</0> It may come in handy, for example, for password recovery. Don't worry, no one else will see it.",
   "redirecting" : "Redirecting...",
   "register" : "Register",
   "register-different-name" : "Register a different name",
