--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -208,7 +208,9 @@
   "edit-post-title" : "Edytuj post",
   "edit-profile" : "Edytuj profil",
   "e-mail" : "E-mail",
+  "email" : "E-mail",
   "email-not-set" : "Niestety, adres e-mail dla bloga <b>{location}</b> nie został ustawiony, więc automatyczne resetowanie hasła jest niemożliwe. Skontaktuj się z dostawcą Moera lub właścicielem serwera, aby znaleźć alternatywne sposoby resetowania hasła.",
+  "email-set" : "Adres e-mail ustawiony",
   "enable-oppose-reactions" : "Włącz reakcje \"Przeciwny\"",
   "enable-reactions" : "Włącz reakcje",
   "enter-name" : "Wpisz imię...",
@@ -409,7 +411,8 @@
   "name-or-node-url" : "Nazwa bloga lub URL",
   "name-or-node-url-not-valid" : "Nazwa bloga lub URL jest nieprawidłowa",
   "need-to-choose" : "Należy wybrać",
-  "new-name-new-posts" : "The new name will only appear in your new posts and comments",
+  "new-avatar-new-posts" : "Nowy awatar pojawi się tylko w twoich nowych postach i komentarzach",
+  "new-name-new-posts" : "Nowe imię pojawi się tylko w twoich nowych postach i komentarzach",
   "new-password" : "Nowe hasło",
   "new-post-button" : "Nowy post",
   "new-post-item" : "Nowy post",
@@ -558,6 +561,7 @@
   "read-more" : "Czytaj więcej...",
   "reason" : "Powód",
   "received-mail" : "Otrzymano już maila",
+  "recommend-set-email" : "<0>Zalecamy podanie adresu e-mail.</0> Może się przydać, na przykład, do odzyskania hasła. Nie martw się, nikt inny go nie zobaczy.",
   "redirecting" : "Przekierowanie...",
   "register" : "Zarejestruj",
   "register-different-name" : "Zarejestruj inną nazwę",
