--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -208,7 +208,9 @@
   "edit-post-title" : "Редактировать пост",
   "edit-profile" : "Редактировать профиль",
   "e-mail" : "E-mail",
+  "email" : "Электронная почта",
   "email-not-set" : "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
+  "email-set" : "Адрес электронной почты установлен",
   "enable-oppose-reactions" : "Разрешить неодобрительные реакции",
   "enable-reactions" : "Разрешить реакции",
   "enter-name" : "Введите имя...",
@@ -409,6 +411,7 @@
   "name-or-node-url" : "Имя или URL блога",
   "name-or-node-url-not-valid" : "Неверное имя или URL блога",
   "need-to-choose" : "Нужно выбрать",
+  "new-avatar-new-posts" : "Новая аватарка появится только в ваших новых постах и комментариях",
   "new-name-new-posts" : "Новое имя появится только в ваших новых постах и комментариях",
   "new-password" : "Новый пароль",
   "new-post-button" : "Написать",
@@ -558,6 +561,7 @@
   "read-more" : "Читать дальше...",
   "reason" : "Причина",
   "received-mail" : "Уже получил письмо",
+  "recommend-set-email" : "<0>Рекомендуем указать адрес электронной почты.</0> Он может пригодиться, например, для восстановления пароля. Не беспокойтесь, никто посторонний его не увидит.",
   "redirecting" : "Перенаправляю...",
   "register" : "Регистрация",
   "register-different-name" : "Зарегистрировать другое имя",
