--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -208,7 +208,9 @@
   "edit-post-title" : "Редагувати пост",
   "edit-profile" : "Редагувати профіль",
   "e-mail" : "E-mail",
+  "email" : "Електронна пошта",
   "email-not-set" : "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
+  "email-set" : "Адресу електронної пошти встановлено",
   "enable-oppose-reactions" : "Дозволити несхвальні реакції",
   "enable-reactions" : "Дозволити реакції",
   "enter-name" : "Введіть ім'я...",
@@ -409,6 +411,7 @@
   "name-or-node-url" : "Ім'я чи URL блога",
   "name-or-node-url-not-valid" : "Неправильне ім'я або URL блога",
   "need-to-choose" : "Треба вибрати",
+  "new-avatar-new-posts" : "Нова аватарка з'явиться лише у ваших нових постах і коментарях",
   "new-name-new-posts" : "Нове ім'я з'явиться лише у ваших нових постах і коментарях",
   "new-password" : "Новий пароль",
   "new-post-button" : "Написати",
@@ -558,6 +561,7 @@
   "read-more" : "Читати далі...",
   "reason" : "Причина",
   "received-mail" : "Вже отримав листа",
+  "recommend-set-email" : "<0>Рекомендуємо вказати адресу електронної пошти.</0> Вона може знадобитися, наприклад, для відновлення пароля. Не хвилюйтеся, ніхто сторонній її не побачить.",
   "redirecting" : "Перенаправляю...",
   "register" : "Реєстрація",
   "register-different-name" : "Зареєструвати інше ім'я",
